--- a/package.json
+++ b/package.json
@@ -158,11 +158,13 @@
     "lodash": "4.17.10",
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
+    "rc-progress": "^2.2.5",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
     "react-loadable": "5.4.0",
+    "react-progressbar": "^15.4.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
