--- a/package.json
+++ b/package.json
@@ -166,7 +166,8 @@
     "react-loadable": "5.4.0",
     "react-progressbar": "^15.4.1",
     "react-redux": "5.0.7",
-    "react-router-dom": "4.3.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "redux": "4.0.0",
     "redux-immutable": "4.0.0",
