--- a/package.json
+++ b/package.json
@@ -155,8 +155,9 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
-    "lodash": "4.17.10",
     "minimist": "1.2.0",
+    "paper": "^0.11.5",
+    "paper-select-tool": "^0.2.9",
     "prop-types": "15.6.1",
     "rc-progress": "^2.2.5",
     "react": "16.4.1",
@@ -164,6 +165,7 @@
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
     "react-loadable": "5.4.0",
+    "react-paper-bindings": "^1.1.1",
     "react-progressbar": "^15.4.1",
     "react-redux": "5.0.7",
     "react-router-dom": "4.3.1",
@@ -174,6 +176,7 @@
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "3.3.2",
+    "tether": "^1.4.4",
     "warning": "4.0.1",
     "whatwg-fetch": "2.0.4"
   },
