--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "cross-env": "5.2.0",
     "express": "4.16.3",
     "fontfaceobserver": "2.0.13",
+    "graham_scan": "^1.0.4",
     "history": "4.7.2",
     "hoist-non-react-statics": "2.5.5",
     "immutable": "3.8.2",
@@ -176,6 +177,7 @@
     "redux-saga": "0.16.0",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
+    "sort-by-distance": "^1.0.1",
     "styled-components": "3.3.2",
     "tether": "^1.4.4",
     "warning": "4.0.1",
