--- a/package.json
+++ b/package.json
@@ -148,6 +148,7 @@
     "compression": "1.7.2",
     "cross-env": "5.2.0",
     "express": "4.16.3",
+    "file-saver": "^1.3.8",
     "fontfaceobserver": "2.0.13",
     "graham_scan": "^1.0.4",
     "history": "4.7.2",
@@ -156,6 +157,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.4",
     "ip": "1.1.5",
+    "jszip": "^3.1.5",
     "minimist": "1.2.0",
     "paper": "^0.11.5",
     "paper-select-tool": "^0.2.9",
