--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "git://github.com/react-boilerplate/react-boilerplate.git"
   },
   "engines": {
-    "npm": ">=5",
-    "node": ">=8"
+    "npm": "5.6.0",
+    "node": "9.11.2"
   },
   "author": "Max Stoiber",
   "license": "MIT",
