--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     ]
   },
   "dependencies": {
+    "FileSaver": "^0.10.0",
     "babel-polyfill": "6.26.0",
     "chalk": "^2.4.1",
     "compression": "1.7.2",
@@ -150,6 +151,7 @@
     "express": "4.16.3",
     "file-saver": "^1.3.8",
     "fontfaceobserver": "2.0.13",
+    "fs": "0.0.1-security",
     "graham_scan": "^1.0.4",
     "history": "4.7.2",
     "hoist-non-react-statics": "2.5.5",
